--- a/ripple.config
+++ b/ripple.config
@@ -13,22 +13,23 @@
     <Feed Url="http://packages.nuget.org/v1/FeedService.svc" Mode="Fixed" Stability="ReleasedOnly" />
   </Feeds>
   <Nugets>
-    <Dependency Name="Bottles" Version="2.0.0.558" Mode="Float" />
+    <Dependency Name="Bottles" Version="2.0.0.561" Mode="Float" />
     <Dependency Name="BottleServiceRunner" Version="2.0.0.558" Mode="Float" />
     <Dependency Name="FubuCore" Version="1.2" Mode="Float" />
-    <Dependency Name="FubuMVC.Core" Version="1.2.0.1640" Mode="Float" />
+    <Dependency Name="FubuLocalization" Version="1.0.0.172" Mode="Float" />
+    <Dependency Name="FubuMVC.Core" Version="1.2.0.1646" Mode="Float" />
     <Dependency Name="FubuMVC.Core.Assets" Version="0.9.9.527" Mode="Float" />
-    <Dependency Name="FubuMVC.Core.UI" Version="1.0.1.570" Mode="Float" />
-    <Dependency Name="FubuMVC.Core.View" Version="1.0.0.552" Mode="Float" />
-    <Dependency Name="FubuMVC.Diagnostics" Version="0.9.6.328" Mode="Float" />
-    <Dependency Name="FubuMVC.Instrumentation" Version="0.1.0.180" Mode="Float" />
-    <Dependency Name="FubuMVC.JQueryUI" Version="0.5.0.321" Mode="Float" />
+    <Dependency Name="FubuMVC.Core.UI" Version="1.0.1.584" Mode="Float" />
+    <Dependency Name="FubuMVC.Core.View" Version="1.0.0.562" Mode="Float" />
+    <Dependency Name="FubuMVC.Diagnostics" Version="0.9.7.336" Mode="Float" />
+    <Dependency Name="FubuMVC.Instrumentation" Version="0.1.0.195" Mode="Float" />
+    <Dependency Name="FubuMVC.JQueryUI" Version="0.5.0.326" Mode="Float" />
     <Dependency Name="FubuMVC.Katana" Version="1.2.0.1640" Mode="Float" />
-    <Dependency Name="FubuMVC.Media" Version="0.9.5.412" Mode="Float" />
-    <Dependency Name="FubuMVC.Navigation" Version="0.9.1.186" Mode="Float" />
+    <Dependency Name="FubuMVC.Media" Version="0.9.5.417" Mode="Float" />
+    <Dependency Name="FubuMVC.Navigation" Version="0.9.1.191" Mode="Float" />
     <Dependency Name="FubuMVC.OwinHost" Version="1.2.0.1640" Mode="Float" />
     <Dependency Name="FubuMVC.SlickGrid" Version="0.5.0.640" Mode="Float" />
-    <Dependency Name="FubuMVC.Spark" Version="1.0.0.552" Mode="Float" />
+    <Dependency Name="FubuMVC.Spark" Version="1.0.0.562" Mode="Float" />
     <Dependency Name="FubuMVC.StructureMap" Version="1.2.0.1637" Mode="Float" />
     <Dependency Name="FubuMVC.TwitterBootstrap" Version="0.0.0.635" Mode="Float" />
     <Dependency Name="FubuTestingSupport" Version="1.2.0.259" Mode="Float" />
