added the two schedule makers

--- a/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
+++ b/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
@@ -113,6 +113,7 @@
     <Compile Include="Async\FullAsyncHandlingIntegrationTester.cs" />
     <Compile Include="Async\when_invoking_with_cascading_messages.cs" />
     <Compile Include="Configuration\AllInMemoryQueues_Mechanics_Tester.cs" />
+    <Compile Include="Configuration\ByTaskSchedulerMakerTester.cs" />
     <Compile Include="Configuration\ChannelGraphTester.cs" />
     <Compile Include="Configuration\ChannelNodeTester.cs" />
     <Compile Include="Configuration\FubuTransportRegistryTester.cs" />
