--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -179,6 +179,7 @@
     <Compile Include="Polling\RegisterPollingJobs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RecordingServiceBus.cs" />
+    <Compile Include="Registration\DefaultHandlerSource.cs" />
     <Compile Include="Registration\ExplicitTypeHandlerSource.cs" />
     <Compile Include="Registration\FuncBuilder.cs" />
     <Compile Include="Registration\HandlerSource.cs" />
