--- a/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
+++ b/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
@@ -233,7 +233,7 @@
     <Compile Include="Runtime\Serializers\EnvelopeSerializerIntegratedTester.cs" />
     <Compile Include="Runtime\Serializers\EnvelopeSerializerTester.cs" />
     <Compile Include="Runtime\Serializers\XmlMessageSerializerTester.cs" />
-    <Compile Include="Runtime\SubscriptionsIntegrationTester.cs" />
+    <Compile Include="Subscriptions\SubscriptionsIntegrationTester.cs" />
     <Compile Include="Runtime\when_requesting_a_response.cs" />
     <Compile Include="Runtime\when_sending_with_the_expectation_of_a_response.cs" />
     <Compile Include="Runtime\when_starting_the_subscriptions.cs" />
@@ -280,6 +280,7 @@
     <Compile Include="ServiceBus_Consume_right_now_Mr_Tester.cs" />
     <Compile Include="ServiceBus_DelaySend_Tester.cs" />
     <Compile Include="StandinTester.cs" />
+    <Compile Include="Subscriptions\TransportNodeTester.cs" />
     <Compile Include="TestContinuationContext.cs" />
     <Compile Include="TestSupport\MessageWatcherTester.cs" />
     <Compile Include="TransportActivatorTester.cs" />
