--- a/src/FubuTransportation.Testing/ripple.dependencies.config
+++ b/src/FubuTransportation.Testing/ripple.dependencies.config
@@ -2,9 +2,17 @@ Bottles
 FubuCore
 FubuLocalization
 FubuMVC.Core
+FubuMVC.Core.Assets
+FubuMVC.Core.UI
+FubuMVC.Core.View
+FubuMVC.Diagnostics
+FubuMVC.JQueryUI
 FubuMVC.Katana
+FubuMVC.Navigation
 FubuMVC.OwinHost
+FubuMVC.Spark
 FubuMVC.StructureMap
+FubuMVC.TwitterBootstrap
 FubuTestingSupport
 HtmlTags
 NUnit
