--- a/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
+++ b/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
@@ -144,6 +144,7 @@
     <Compile Include="Configuration\ChannelGraph_has_to_be_a_StructureMap_singleton.cs" />
     <Compile Include="Configuration\ChannelNodeTester.cs" />
     <Compile Include="Configuration\FubuTransportRegistryTester.cs" />
+    <Compile Include="Configuration\FubuTransportRegistry_register_subscription_requirements_Tester.cs" />
     <Compile Include="Configuration\HandlerChain_Exception_Handling_Rules_Registration_Tester.cs" />
     <Compile Include="Configuration\HandlerChainTester.cs" />
     <Compile Include="Configuration\HandlerGraphTester.cs" />
@@ -260,6 +261,8 @@
     <Compile Include="Runtime\Serializers\EnvelopeSerializerIntegratedTester.cs" />
     <Compile Include="Runtime\Serializers\EnvelopeSerializerTester.cs" />
     <Compile Include="Runtime\Serializers\XmlMessageSerializerTester.cs" />
+    <Compile Include="Subscriptions\when_creating_grouped_subscriptions.cs" />
+    <Compile Include="Subscriptions\when_creating_local_subscriptions.cs" />
     <Compile Include="Subscriptions\SubscriptionsIntegrationTester.cs" />
     <Compile Include="Runtime\when_requesting_a_response.cs" />
     <Compile Include="Runtime\when_sending_with_the_expectation_of_a_response.cs" />
