initial work on subscription activator

--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -251,6 +251,7 @@
     <Compile Include="Runtime\Serializers\XmlMessageSerializer.cs" />
     <Compile Include="Subscriptions\ISubscriptionRequirement.cs" />
     <Compile Include="Subscriptions\LocalSubscriptionRequirement.cs" />
+    <Compile Include="Subscriptions\SubscriptionActivator.cs" />
     <Compile Include="Subscriptions\SubscriptionClasses.cs" />
     <Compile Include="Subscriptions\SubscriptionGateway.cs" />
     <Compile Include="Runtime\TransportActivator.cs" />
