ChannelGraph has to has to has to be a singleton in StructureMap to avoid unintended consequences

--- a/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
+++ b/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
@@ -141,6 +141,7 @@
     <Compile Include="Configuration\ByTaskSchedulerMakerTester.cs" />
     <Compile Include="Configuration\ChannelGraphTester.cs" />
     <Compile Include="Configuration\ChannelGraph_can_read_thread_and_task_counts_from_config.cs" />
+    <Compile Include="Configuration\ChannelGraph_has_to_be_a_StructureMap_singleton.cs" />
     <Compile Include="Configuration\ChannelNodeTester.cs" />
     <Compile Include="Configuration\FubuTransportRegistryTester.cs" />
     <Compile Include="Configuration\HandlerChain_Exception_Handling_Rules_Registration_Tester.cs" />
