Ignoring snippets directory in docs

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ testEditor.css
 src/FubuTransportation.Storyteller/FubuTransportation.Storyteller-results/
 fubutransportation.esent
 fubutransportation.esent.*
+src/FubuTransportation.Docs/snippets
