--- a/src/FubuTransportation.LightningQueues.Testing/ripple.dependencies.config
+++ b/src/FubuTransportation.LightningQueues.Testing/ripple.dependencies.config
@@ -2,13 +2,24 @@ Bottles
 FubuCore
 FubuLocalization
 FubuMVC.Core
+FubuMVC.Core.Assets
+FubuMVC.Core.UI
+FubuMVC.Core.View
+FubuMVC.Diagnostics
+FubuMVC.JQueryUI
+FubuMVC.Katana
+FubuMVC.Navigation
+FubuMVC.OwinHost
+FubuMVC.Spark
 FubuMVC.StructureMap
+FubuMVC.TwitterBootstrap
 FubuTestingSupport
 HtmlTags
 LightningQueues
 ManagedEsent
 NUnit
-PowerThreading
+Owin
 RhinoMocks
+Spark
 structuremap
 structuremap.automocking
