--- a/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
+++ b/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
@@ -222,6 +222,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Docs\Polling\PollingJobSamples.cs" />
+    <Compile Include="Docs\Sagas\SagaRepositorySample.cs" />
     <Compile Include="Docs\Sagas\SimpleSaga.cs" />
     <Compile Include="Docs\Transports\InMemorySamples.cs">
       <SubType>Code</SubType>
