very preliminary work on test harness improvements

--- a/src/FubuTransportation.Storyteller/FubuTransportation.Storyteller.csproj
+++ b/src/FubuTransportation.Storyteller/FubuTransportation.Storyteller.csproj
@@ -133,8 +133,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Fixtures\BatchMessageFixture.cs" />
+    <Compile Include="Fixtures\ModelFixture.cs" />
     <Compile Include="Fixtures\SendAndAwaitFixture.cs" />
     <Compile Include="FubuTransportationStorytellerSystem.cs" />
+    <Compile Include="HarnessSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StoryTellerDebug.cs" />
   </ItemGroup>
