removing the polling jobs from diagnostic tracing.  Closes GH-144

--- a/ripple.config
+++ b/ripple.config
@@ -17,21 +17,21 @@
     <Dependency Name="BottleServiceRunner" Version="2.0.0.558" Mode="Float" />
     <Dependency Name="FubuCore" Version="1.2" Mode="Float" />
     <Dependency Name="FubuLocalization" Version="1.0.0.172" Mode="Float" />
-    <Dependency Name="FubuMVC.Core" Version="1.2.0.1646" Mode="Float" />
-    <Dependency Name="FubuMVC.Core.Assets" Version="0.9.9.527" Mode="Float" />
-    <Dependency Name="FubuMVC.Core.UI" Version="1.0.1.584" Mode="Float" />
-    <Dependency Name="FubuMVC.Core.View" Version="1.0.0.562" Mode="Float" />
-    <Dependency Name="FubuMVC.Diagnostics" Version="0.9.7.336" Mode="Float" />
-    <Dependency Name="FubuMVC.Instrumentation" Version="0.1.0.195" Mode="Float" />
-    <Dependency Name="FubuMVC.JQueryUI" Version="0.5.0.326" Mode="Float" />
-    <Dependency Name="FubuMVC.Katana" Version="1.2.0.1640" Mode="Float" />
-    <Dependency Name="FubuMVC.Media" Version="0.9.5.417" Mode="Float" />
-    <Dependency Name="FubuMVC.Navigation" Version="0.9.1.191" Mode="Float" />
-    <Dependency Name="FubuMVC.OwinHost" Version="1.2.0.1640" Mode="Float" />
-    <Dependency Name="FubuMVC.SlickGrid" Version="0.5.0.640" Mode="Float" />
-    <Dependency Name="FubuMVC.Spark" Version="1.0.0.562" Mode="Float" />
-    <Dependency Name="FubuMVC.StructureMap" Version="1.2.0.1637" Mode="Float" />
-    <Dependency Name="FubuMVC.TwitterBootstrap" Version="0.0.0.635" Mode="Float" />
+    <Dependency Name="FubuMVC.Core" Version="1.2.0.1672" Mode="Float" />
+    <Dependency Name="FubuMVC.Core.Assets" Version="0.9.9.557" Mode="Float" />
+    <Dependency Name="FubuMVC.Core.UI" Version="1.0.1.606" Mode="Float" />
+    <Dependency Name="FubuMVC.Core.View" Version="1.0.0.576" Mode="Float" />
+    <Dependency Name="FubuMVC.Diagnostics" Version="0.9.8.355" Mode="Float" />
+    <Dependency Name="FubuMVC.Instrumentation" Version="0.1.0.233" Mode="Float" />
+    <Dependency Name="FubuMVC.JQueryUI" Version="0.5.0.339" Mode="Float" />
+    <Dependency Name="FubuMVC.Katana" Version="1.2.0.1672" Mode="Float" />
+    <Dependency Name="FubuMVC.Media" Version="0.9.5.430" Mode="Float" />
+    <Dependency Name="FubuMVC.Navigation" Version="0.9.1.205" Mode="Float" />
+    <Dependency Name="FubuMVC.OwinHost" Version="1.2.0.1672" Mode="Float" />
+    <Dependency Name="FubuMVC.SlickGrid" Version="0.5.0.647" Mode="Float" />
+    <Dependency Name="FubuMVC.Spark" Version="1.0.0.576" Mode="Float" />
+    <Dependency Name="FubuMVC.StructureMap" Version="1.2.0.1672" Mode="Float" />
+    <Dependency Name="FubuMVC.TwitterBootstrap" Version="0.0.0.642" Mode="Float" />
     <Dependency Name="FubuTestingSupport" Version="1.2.0.259" Mode="Float" />
     <Dependency Name="HtmlTags" Version="2.0.0.179" Mode="Float" />
     <Dependency Name="LightningQueues" Version="0.1.0.47" Mode="Float" />
@@ -46,9 +46,10 @@
     <Dependency Name="Selenium.WebDriverBackedSelenium" Version="2.35.0.0" Mode="Fixed" />
     <Dependency Name="Serenity" Version="0.9.8.203" Mode="Float" />
     <Dependency Name="Spark" Version="1.7.5.1" Mode="Fixed" />
-    <Dependency Name="Storyteller2" Version="2.0.0.30" Mode="Float" />
+    <Dependency Name="Storyteller2" Version="2.0.0.40" Mode="Float" />
     <Dependency Name="structuremap" Version="2.6.3" Mode="Fixed" />
     <Dependency Name="structuremap.automocking" Version="2.6.3" Mode="Fixed" />
+    <Dependency Name="TopShelf" Version="3.1.2.0" Mode="Fixed" />
   </Nugets>
   <Groups />
   <References>
