--- a/src/DiagnosticsHarness/DiagnosticsHarness.csproj
+++ b/src/DiagnosticsHarness/DiagnosticsHarness.csproj
@@ -116,6 +116,9 @@
     <Reference Include="System.Web" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
+    <Reference Include="Topshelf">
+      <HintPath>..\packages\Topshelf\lib\net40-full\Topshelf.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FubuHarnessRegistry.cs" />
