implementing the little bit of logic in SubscriptionsRepository

--- a/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
+++ b/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
@@ -652,6 +652,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Subscriptions\SubscriptionCache_routing_with_subscription_Tester.cs" />
+    <Compile Include="Subscriptions\SubscriptionRepositoryTester.cs" />
     <Compile Include="Subscriptions\SubscriptionsIntegrationTester.cs">
       <SubType>Code</SubType>
     </Compile>
