--- a/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
+++ b/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
@@ -654,6 +654,7 @@
     <Compile Include="Subscriptions\SubscriptionCache_replace_subscriptions_tester.cs" />
     <Compile Include="Subscriptions\SubscriptionCache_routing_with_subscription_Tester.cs" />
     <Compile Include="Subscriptions\SubscriptionRepositoryTester.cs" />
+    <Compile Include="Subscriptions\SubscriptionsHandlerTester.cs" />
     <Compile Include="Subscriptions\SubscriptionsIntegrationTester.cs">
       <SubType>Code</SubType>
     </Compile>
